frontend/src/assets/variables.css
/* ----------- Colors ----------- */
[data-theme],
:root {
    --color-scheme: dark;

    /* Base Colors */
    --c-bg-base: oklch(0% 0 0);

    --c-text-white-base: oklch(92.5% 0 0);
    --c-text-black-base: oklch(7.5% 0 0);

    --c-primary:    oklch(92% 0 0);
    --c-accent:  oklch(32.8% 0.065 240);
    --c-favourite:  oklch(51.196% 0.175 14);
    --c-neutral:    oklch(40% 0 0 / 33%);
    /* --c-neutral:    oklch(28% 0 0); */
    --c-positive:   oklch(58% 0.14 155);
    --c-warning:    oklch(75% 0.14 80);
    --c-negative:   oklch(52% 0.14 27);


    /* Offsets and levels */
    --o-colors-1: 0.03;
    --o-colors-2: 0.06;
    --o-bg-1: 0.19; 
    --o-bg-2: 0.22;
    --o-border: 0.12;
    --o-border-strong: 0.12;
    --o-text-w-n-b: 0.125;
    --o-text-norm-n-inv: var(--o-text-w-n-b);

    --a-trans: 0.66;

    --hero-backdrop-opacity: 0.4;
    --hero-backdrop-color: var(--c-bg);
    --details-backdrop-fade-intensity: 0.5;
    --details-backdrop-min-brightness: 1;

    /* Borders and inputs */
    --c-border: oklch(45% 0 0 / 50%);
    --c-border-strong: oklch(from var(--c-border) calc(l + var(--o-border-strong)) c h);

    --c-input: oklch(12.5% 0 0 / 50%);
    --c-input-text: var(--c-text);
    
    /* Background levels */
    --c-bg: var(--c-bg-base);
    --c-bg-level-1: oklch(from var(--c-bg-base) calc(l + var(--o-bg-1)) c h);
    --c-bg-level-2: oklch(from var(--c-bg-base) calc(l + var(--o-bg-2)) c h);
    --c-bg-opaque:          var(var(--c-bg-opaque-base));
    --c-bg-opaque-base:     oklch(from var(--c-bg-base) l c h / var(--a-trans));
    --c-bg-opaque-level-1:  oklch(from var(--c-bg-base) calc(l + var(--o-colors-1)) c h / var(--a-trans));
    --c-bg-opaque-level-2:  oklch(from var(--c-bg-base) calc(l + var(--o-colors-2)) c h / var(--a-trans));
    --c-bg-backdrop: oklch(from var(--c-bg-base) calc(l * 0.5) c h / 50%);

    /* Text levels */
    --c-text-white: var(--c-text-white-base);
    --c-text-black: var(--c-text-black-base);
    --c-text:       var(--c-text-white-base);
    --c-text-inv:   var(--c-text-black-base);

    --c-text-white-strong:  oklch(from var(--c-text-white-base) calc(l + var(--o-text-w-n-b) * 1) c h);
    --c-text-white-soft:    oklch(from var(--c-text-white-base) calc(l - var(--o-text-w-n-b) * 1) c h);
    --c-text-white-subtle:  oklch(from var(--c-text-white-base) calc(l - var(--o-text-w-n-b) * 2) c h);

    --c-text-black-strong:  oklch(from var(--c-text-black-base) calc(l - var(--o-text-w-n-b) * 1) c h);
    --c-text-black-soft:    oklch(from var(--c-text-black-base) calc(l + var(--o-text-w-n-b) * 1) c h);
    --c-text-black-subtle:  oklch(from var(--c-text-black-base) calc(l + var(--o-text-w-n-b) * 2) c h);

    --c-text-strong:        oklch(from var(--c-text) calc(l + var(--o-text-norm-n-inv) * 1) c h);
    --c-text-soft:          oklch(from var(--c-text) calc(l - var(--o-text-norm-n-inv) * 1) c h);
    --c-text-subtle:        oklch(from var(--c-text) calc(l - var(--o-text-norm-n-inv) * 2) c h);

    --c-text-inv-strong:    oklch(from var(--c-text-inv) calc(l - var(--o-text-norm-n-inv) * 1) c h);
    --c-text-inv-soft:      oklch(from var(--c-text-inv) calc(l + var(--o-text-norm-n-inv) * 1) c h);
    --c-text-inv-subtle:    oklch(from var(--c-text-inv) calc(l + var(--o-text-norm-n-inv) * 2) c h);
    
    /* Unique color variations */
    --c-primary-soft:           oklch(from var(--c-primary) calc(l + var(--o-colors-1)) c h);
    --c-primary-subtle:         oklch(from var(--c-primary) calc(l + var(--o-colors-2)) c h);
    --c-primary-border:         oklch(from var(--c-primary) calc(l + var(--o-border)) c h);
    --c-primary-border-strong:  oklch(from var(--c-primary) calc(l + var(--o-border-strong)) c h);
    --c-primary-transparent:    oklch(from var(--c-primary) l c h / var(--a-trans));

    --c-accent-soft:            oklch(from var(--c-accent) calc(l + var(--o-colors-1)) c h);
    --c-accent-subtle:          oklch(from var(--c-accent) calc(l + var(--o-colors-2)) c h);
    --c-accent-border:          oklch(from var(--c-accent) calc(l + var(--o-border)) c h);
    --c-accent-border-strong:   oklch(from var(--c-accent) calc(l + var(--o-border-strong)) c h);
    --c-accent-transparent:     oklch(from var(--c-accent) l c h / var(--a-trans));

    --c-favourite-soft:          oklch(from var(--c-favourite) calc(l + var(--o-colors-1)) c h);
    --c-favourite-subtle:        oklch(from var(--c-favourite) calc(l + var(--o-colors-2)) c h);
    --c-favourite-border:        oklch(from var(--c-favourite) calc(l + var(--o-border)) c h);
    --c-favourite-border-strong: oklch(from var(--c-favourite) calc(l + var(--o-border-strong)) c h);
    --c-favourite-transparent:   oklch(from var(--c-favourite) l c h / var(--a-trans));

    --c-neutral-soft:           oklch(from var(--c-neutral) calc(l + var(--o-colors-1)) c h);
    --c-neutral-subtle:         oklch(from var(--c-neutral) calc(l + var(--o-colors-2)) c h);
    --c-neutral-border:         oklch(from var(--c-neutral) calc(l + var(--o-border)) c h);
    --c-neutral-border-strong:  oklch(from var(--c-neutral) calc(l + var(--o-border-strong)) c h);
    --c-neutral-transparent:    oklch(from var(--c-neutral) l c h / var(--a-trans));

    --c-positive-soft:          oklch(from var(--c-positive) calc(l + var(--o-colors-1)) c h);
    --c-positive-subtle:        oklch(from var(--c-positive) calc(l + var(--o-colors-2)) c h);
    --c-positive-border:        oklch(from var(--c-positive) calc(l + var(--o-border)) c h);
    --c-positive-border-strong: oklch(from var(--c-positive) calc(l + var(--o-border-strong)) c h);
    --c-positive-transparent:   oklch(from var(--c-positive) l c h / var(--a-trans));

    --c-warning-soft:           oklch(from var(--c-warning) calc(l + var(--o-colors-1)) c h);
    --c-warning-subtle:         oklch(from var(--c-warning) calc(l + var(--o-colors-2)) c h);
    --c-warning-border:         oklch(from var(--c-warning) calc(l + var(--o-border)) c h);
    --c-warning-border-strong:  oklch(from var(--c-warning) calc(l + var(--o-border-strong)) c h);
    --c-warning-transparent:    oklch(from var(--c-warning) l c h / var(--a-trans));

    --c-negative-soft:          oklch(from var(--c-negative) calc(l + var(--o-colors-1)) c h);
    --c-negative-subtle:        oklch(from var(--c-negative) calc(l + var(--o-colors-2)) c h);
    --c-negative-border:        oklch(from var(--c-negative) calc(l + var(--o-border)) c h);
    --c-negative-border-strong: oklch(from var(--c-negative) calc(l + var(--o-border-strong)) c h);
    --c-negative-transparent:   oklch(from var(--c-negative) l c h / var(--a-trans));
}


/* ----------- Spacings ----------- */
:root {
    --spacing-layout-inline: 5vw;

    --spacing-xs: 4px;
    --spacing-xs-sm: 6px;
    --spacing-sm: 8px;
    --spacing-sm-md: 12px;
    --spacing-md: 16px;
    --spacing-md-lg: 24px;
    --spacing-lg: 32px;
    --spacing-lg-xl: 48px;
    --spacing-xl: 64px;

    --border-radius-sm: 4px;
    --border-radius-sm-md: 6px;
    --border-radius-md: 8px;
    --border-radius-md-lg: 12px;
    --border-radius-lg: 16px;
    --border-radius-lg-xl: 24px;
    --border-radius-xl: 32px;
}


/* ----------- Font sizes ----------- */
:root {
    --font-size-base: 1rem;

    --fs-multiplier: 1.2;

    --fs-neg-3: calc(var(--fs-neg-2) / var(--fs-multiplier));
    --fs-neg-2: calc(var(--fs-neg-1) / var(--fs-multiplier));
    --fs-neg-1: calc(var(--fs-0) / var(--fs-multiplier));
    --fs-0   : var(--font-size-base);
    --fs-1   : calc(var(--fs-0) * var(--fs-multiplier));
    --fs-2   : calc(var(--fs-1) * var(--fs-multiplier));
    --fs-3   : calc(var(--fs-2) * var(--fs-multiplier));
    --fs-4   : calc(var(--fs-3) * var(--fs-multiplier));
}


/* ----------- Transitions ----------- */
:root {
    --transition-ease-out: cubic-bezier(.23,.52,.4,.95);
    --transition-ease: cubic-bezier(0.25, 1, 0.5, 1);
    --transition-bounce: cubic-bezier(.33,.24,.19,1.45);
}


/* ----------- Z indexes ----------- */
:root {
    --z-modal: 2000;
    --z-nav: 1000;
}

/* ----------- Blur amounts ----------- */
:root {
    --blur-heavy: 32px;
    --blur-subtle: 16px;
}

/* ----------- Specials ----------- */
:root {
    --title-card-width: 185px;
    --collection-card-width: 500px;
}

